# skais-mapper

./: .gitignore  404.html  Makefile  README.org  default.nix  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: build-package.yml  github-release.yml  on_branches.yml  on_pr.yml  on_push.yml  publish-to-pypi.yml  test-install.yml
configs/: test_tng50-1.50.2D.6000.6001.json  tng50-1.50.2D.0000.1000.json  tng50-1.50.2D.1000.2000.json  tng50-1.50.2D.2000.3000.json  tng50-1.67.2D.0000.1000.json  tng50-1.67.2D.1000.2000.json  tng50-1.67.2D.2000.3000.json  tng50-1.78.2D.0000.1000.json  tng50-1.78.2D.1000.2000.json  tng50-1.78.2D.2000.3000.json  tng50-1.84.2D.0000.1000.json  tng50-1.84.2D.1000.2000.json  tng50-1.84.2D.2000.3000.json  tng50-1.91.2D.0000.1000.json  tng50-1.91.2D.1000.2000.json  tng50-1.91.2D.2000.3000.json  tng50-1.99.2D.0000.1000.json  tng50-1.99.2D.1000.2000.json  tng50-1.99.2D.2000.3000.json
docs/: index.md  install.md  reference.md  usage.md
install/: index.html
reference/: index.html
reference/skais_mapper/: index.html
reference/skais_mapper/configs/: index.html
reference/skais_mapper/configure/: index.html
reference/skais_mapper/cosmology/: index.html
reference/skais_mapper/data/: index.html
reference/skais_mapper/generate/: index.html
reference/skais_mapper/illustris/: index.html
reference/skais_mapper/illustris/groupcat/: index.html
reference/skais_mapper/illustris/snapshots/: index.html
reference/skais_mapper/illustris/util/: index.html
reference/skais_mapper/plotting/: index.html
reference/skais_mapper/rotations/: index.html
reference/skais_mapper/simobjects/: index.html
reference/skais_mapper/utils/: index.html
reference/skais_mapper/utils/colors/: index.html
reference/skais_mapper/utils/config/: index.html
reference/skais_mapper/utils/helper/: index.html
reference/skais_mapper/utils/primes/: index.html
search/: search_index.json
skais_mapper/: __about__.py  __init__.py  __main__.py  _torch_stub.py  configure.py  cosmology.py  data.py  generate.py  metrics.py  plotting.py  profile.py  raytrace.c  raytrace.pyx  rotations.py  simobjects.py
skais_mapper/configs/: __init__.py  config.yaml
skais_mapper/configs/experiment/: local.yaml  tng50-1-50-2D-0000-1000.yaml  tng50-1-50-2D-1000-2000.yaml  tng50-1-50-2D-2000-3000.yaml  tng50-1-67-2D-0000-1000.yaml  tng50-1-67-2D-1000-2000.yaml  tng50-1-67-2D-2000-3000.yaml  tng50-1-78-2D-0000-1000.yaml  tng50-1-78-2D-1000-2000.yaml  tng50-1-78-2D-2000-3000.yaml  tng50-1-84-2D-0000-1000.yaml  tng50-1-84-2D-1000-2000.yaml  tng50-1-84-2D-2000-3000.yaml  tng50-1-91-2D-0000-1000.yaml  tng50-1-91-2D-1000-2000.yaml  tng50-1-91-2D-2000-3000.yaml  tng50-1-99-2D-0000-1000.yaml  tng50-1-99-2D-1000-2000.yaml  tng50-1-99-2D-2000-3000.yaml
skais_mapper/configs/hydra/: cluster.yaml  default.yaml
skais_mapper/illustris/: __init__.py  groupcat.py  snapshots.py  util.py
skais_mapper/utils/: __init__.py  colors.py  config.py  helper.py  primes.py
tests/: test_configure.py  test_data.py  test_illustris_util.py  test_metrics.py  test_plotting.py  test_profile.py  test_simobjects.py  test_utils.py
usage/: index.html
