[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "skais-mapper"
dynamic = ["version"]
description = "skais-mapper: a framework for generating deep-learning SKA radio telescope & cosmological hydrodynamical simulation data"
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
  {name = "Philipp Denzel", email = "phdenzel@gmail.com"},
]
maintainers = [
  {name = "Philipp Denzel", email = "phdenzel@gmail.com"},
]
keywords = ["cosmological simulations", "illustris-tng", "radio mocks"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Security"]

dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "astropy",
    "h5py",
    "Pillow",
    "matplotlib",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/phdenzel/skais-mapper"
Repository = "https://github.com/phdenzel/skais-mapper.git"
Issues = "https://github.com/phdenzel/skais-mapper/issues"

[project.scripts]
skais-mapper = "skais_mapper.__main__:main"

[tool.setuptools.packages.find]
exclude = ["notebooks", "scripts", "results"]

#[tool.setuptools.package-data]
#data = ["*.hdf5"]


# Linting, flaking, etc.
[tool.ruff]
line-length = 100
select = ["E", "F", "D"]  # "D" includes pydocstyle rules
ignore = ["D200", "D212", "D415"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

# exclude = [
#     '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
#     "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
# ]

# # mypy per-module options:
# [[tool.mypy.overrides]]
# module = "skais.illustris.*"
# disallow_untyped_defs = true

# [[tool.mypy.overrides]]
# module = "skais.nn.data"
# warn_return_any = false
